overlay/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadence
  annotations:
    nginx.org/proxy-send-timeout: "86400s"
    nginx.org/proxy-read-timeout: "86400s"
    nginx.org/eventsource: "true"
spec:
  rules:
  - host: cadenceradio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cadence
            port:
              number: 8080
  - host: stream.cadenceradio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cadence-icecast2
            port:
              number: 8000
